--- a/1.Introduction.tex
+++ b/1.Introduction.tex
@@ -4,9 +4,9 @@ This chapter discusses the motivation, specific context, research gaps of litera
 
 \section{Background and Motivation}\label{Background}
 
-To combat climate change, the production of greenhouse gas emissions must be reduced to significant levels and shift to use of \gls{RES} must be accomplished. In numbers, the European Union's (\gls{EU}) Nationally Determined Contribution (NDC) under the Paris Agreement is to reduce greenhouse gas emissions by at least 40\% by 2030 compared to 1990 \cite{agreement2015unfccc}. 
+To combat climate change, the production of greenhouse gas emissions must be reduced to significant levels and shift to use of Renewable Energy Source (\gls{RES}) must be accomplished. In numbers, the European Union's (\gls{EU}) Nationally Determined Contribution (NDC) under the Paris Agreement is to reduce greenhouse gas emissions by at least 40\% by 2030 compared to 1990 \cite{agreement2015unfccc}. 
 
-The plans involve a future target of nearly 70 GW to 150 GW offshore wind power in the North Sea by 2040. A scope of 140 to 450 GW of offshore wind power in the \gls{EU} by 2050 is seen from the latest European Commission situations. Nearly 13 GW of offshore wind capacity was installed in 2018 in the North Sea. Going with the current pace, the rate of offshore wind deployment is deficient in reaching the objectives of the Paris Agreement. To comply with these objectives, an extraordinary jump in offshore wind energy is required, as shown in Figure \ref{fig:Paris_roll_out}. An effective solution calls for an increase in large scale offshore wind deployment in the North Sea \cite{noauthor_vision_nodate}. As mentioned in \cite{noauthor_tennet_2020}, the Transmission System Operator (TSO) of the Netherlands, TenneT, has already entered into an innovation partnership with its suppliers to establish a 2 GW offshore platform to bring in their contribution towards the Paris Agreement. While the requirement for large scale networks is appealing, the technical challenges that could be encountered should also be considered.  
+The plans involve a future target of nearly 70 GW to 150 GW offshore wind power in the North Sea by 2040. A scope of 140 to 450 GW of offshore wind power in the \gls{EU} by 2050 is seen from the latest European Commission situations. Going with the current pace, the rate of offshore wind deployment is deficient in reaching the objectives of the Paris Agreement. To comply with these objectives, an extraordinary jump in offshore wind energy is required, as shown in Figure \ref{fig:Paris_roll_out}. An effective solution calls for an increase in large scale offshore wind deployment in the North Sea \cite{noauthor_vision_nodate}. As mentioned in \cite{noauthor_tennet_2020}, the Transmission System Operator (TSO) of the Netherlands, TenneT, has already entered into an innovation partnership with its suppliers to establish a 2 GW offshore platform to bring in their contribution towards the Paris Agreement. Likewise, Denmark is progressing with the first hub-and-spoke energy island with a vision of connecting at least 10 GW of offshore wind power in the North Sea \cite{noauthor_first_nodate}. While the requirement for large scale networks is appealing, the technical challenges that could be encountered should also be considered.  
 
 \begin{figure}[H]
 \centering
@@ -16,7 +16,7 @@ The plans involve a future target of nearly 70 GW to 150 GW offshore wind power 
     \label{fig:Paris_roll_out}
 \end{figure}
 
-\gls{RES} are connected to the power system through Power Electronic (\gls{PE}) converters as shown in Figure \ref{fig:Energy_conv_system_2}. The \gls{PE} converters do not posses inherent inertial response characteristics. Until now integration of \gls{RES} has not created major problems since the stability of the system is maintained by the synchronous machines in power plants. Traditionally, the inertia for the power system is provided by these conventional units connected to the network (Figure \ref{fig:Energy_conv_system}). However, an increase in \gls{RES} in the future causes an increase in \gls{PE} converter based generation units. Simultaneously, conventional power plants using non-renewable energy sources need to be disconnected from the network. This makes the power systems weak due to low short circuit power available and low system inertia. The disconnection of conventional generators also requires the \gls{RES} connected through \gls{PE} converter based generation units to take up the role of governing the stability of the system.
+\gls{RES} are connected to the power system through Power Electronic (\gls{PE}) converters as shown in Figure \ref{fig:Energy_conv_system_2}. The \gls{PE} converters do not possess inherent inertial response characteristics. Until now, integration of \gls{RES} to the power system has not created major problems since the stability of the system is maintained by the synchronous machines in power plants. Traditionally, the inertia for the power system is provided by these synchronous machines connected to the network (Figure \ref{fig:Energy_conv_system}). However, an increase in \gls{RES} in the future causes an increase in \gls{PE} converter based generation units. Simultaneously, the synchronous machines in the conventional power plants using non-renewable energy sources need to be disconnected from the network. This makes the power systems weak due to low short circuit power available and low system inertia. Therefore, the consequence of disconnecting the synchronous generators leads to the requirement of the \gls{PE} converter based generation units to take up the role of governing the stability of the system.
 
 \begin{figure}[H]
 \centering
@@ -34,57 +34,75 @@ The plans involve a future target of nearly 70 GW to 150 GW offshore wind power 
     \label{fig:Energy_conv_system}
 \end{figure}
 
-The majorly contributing source among the \gls{RES} is wind energy and the deployment of wind energy technology is expected to grow further. As the share of wind energy among the \gls{RES} increases, the integration of \gls{PE} converter based generation units becomes more challenging. The continuous variations in wind speed causes constant change in the active power output of the wind power plant. This could lead to an increase in the reactive power output and consequently voltage at the point of common coupling (\gls{PCC}). 
-
-The conventional current control methods using Proportional Integral (\gls{PI}) controllers in the modern wind turbines are capable of providing voltage control by injecting reactive currents when connected to a strong network \footnote{SCR = SC$_{MVA}$/P;\; where SC$_{MVA}$ is the short circuit power of the network and P is the active power generation. \\
-If SCR = 100 to 250, it is a strong grid. If SCR = 5 to 25, it is a weak grid.}, capable of absorbing the injected currents. However, these controllers are not suitable for operation in highly \gls{PE} converter dominated grids as the connected network is weak and is not capable of absorbing the injected currents. Furthermore, during the scenario of islanding, voltage control by the conventional controllers is ineffective as the deviation in voltage is not high enough to activate a productive voltage reduction mechanism. Moreover, the frequency of such an islanded network is not controlled as the conventional controllers in the wind generators are not equipped with such capability.  
-
-       
-
-Furthermore, the compelling need to move towards large scale offshore networks increases the challenges from the technical point of view.
+%\section*{Small scale offshore networks}
+The majorly contributing source among the \gls{RES} is wind energy and as a result, the deployment of wind energy technology is expected to grow further. As the share of wind energy among the \gls{RES} increases, the integration of \gls{PE} converter based generation units becomes more challenging. The integration of wind power plants to weak power systems pose various research challenges on the power system stability. 
 
 
-The first significant challenge is the control of voltage and frequency by the \gls{PE} converters without the presence of conventional units in the grid. The absence of conventional generators would mean that the \gls{PE} converters will have to take into account the decreasing inertia of the system that leads to a faster dynamic behaviour and needs controllers with faster time response. 
+One among the challenge is related to voltage stability. The continuous variations in wind speed causes constant change in the active power output of the wind power plant. This could lead to an increase in the reactive power output and consequently voltage at the point of common coupling (\gls{PCC}). The conventional current control methods using Proportional Integral (\gls{PI}) controllers in the modern Wind Generators (\gls{WG}s) are capable of providing voltage control by injecting reactive currents when connected to a strong network \footnote{SCR = SC$_{MVA}$/P;\; where SC$_{MVA}$ is the short circuit power of the network and P is the active power generation. \\
+If SCR = 100 to 250, it is a strong grid. If SCR = 5 to 25, it is a weak grid.}. However, these controllers are not suitable for operation in highly \gls{PE} converter dominated grids as the connected network is weak and is not capable of absorbing the injected currents. Furthermore, during the scenario of islanding, voltage control by the conventional current controllers is ineffective as the deviation in voltage is not high enough to activate a productive voltage reduction mechanism. There are challenges in terms of frequency stability  as well since the conventional current controllers in the \gls{WG}s are not equipped to provide frequency control of the network during islanding. 
 
-The second major concern is with the Proportional Integral (\gls{PI}) based conventional current control methods available for the \gls{PE} converters. Currently, they are the most commonly used controllers due to the ease of operation. They are suitable for operation when connected to a strong network \footnote{SCR = SC$_{MVA}$/P;\; where SC$_{MVA}$ is the short circuit power of the network and P is the active power generation. \\
-If SCR = 100 to 250, it is a strong grid. If SCR = 5 to 25, it is a weak grid.}. However, if overlooked, interactions among \gls{PI} controllers can persist in the grid with high \gls{PE} penetration and could lead to instability of the network.
+Currently, the state-of-the-art technology for the transfer of offshore wind power to the onshore system is Voltage Source Converter (\gls{VSC}) based  - High Voltage Direct Current (\gls{HVDC}) transmission links. Presently, Modular Multi-level Converter (\gls{MMC}) topology that falls under the classification of \gls{VSC} topologies is the most suitable solution. Few of the advantages of \gls{MMC} are \cite{cigre_B455}, (1) ease of integration with Offshore Wind Farms (\gls{OWF})s, (2) supporting bi-directional flow of power between the offshore network and onshore system, and (3) independent control of active and reactive powers in the network. However, with the available technology, \gls{MMC}-\gls{HVDC} transmission are limited to a rated capacity of 1.2 GW \cite{peralta2012detailed}.
 
-The third critical challenge is the grid restoration following disturbances by the \gls{PE} converter units. With the conventional current control approach, grid restoration is challenging without the help of auxiliary diesel generators. However, in the case of increasing \gls{PE} converters, the role of grid restoration must be taken up by these converters. There can be arguments that storage facilities such as battery and thermal can be a realizable solution in case when there are no conventional generators available. Huge investment costs, low lifetime and low efficiency are the drawbacks when compared to controller modifications that make these storage facilities practically unusable in large scale power system \cite{telaretti_economic_2016}.  
+%\section*{Large scale offshore networks}\label{large_scale_intro}
+The implementation of large scale offshore networks (greater than or equal to 2 GW) creates a highly \gls{PE} converter dominated network. The aforementioned challenges in terms of voltage and frequency control by the \gls{PE} converters without the presence of conventional units is prominent in large scale offshore networks. 
 
-Lastly, the connection of distant Offshore Wind Farms (\gls{OWF}s) also creates challenges for the system operators. High Voltage Direct Current (\gls{HVDC}) transmission is preferred over High Voltage Alternating Current (\gls{HVAC}) for longer distances due to lower losses and lower investment costs \cite{ryndzionek_evolution_2020}. Conventionally, in an offshore wind farm network, the offshore converter works in voltage control, and the wind turbine converters work in current control scheme. This could cause problems to the \gls{OWF} during severe dynamic scenarios. One such scenario is the reactive current injection that needs to be provided by the Wind Generators (\gls{WG}s) during dynamic conditions as demanded by majority of the grid codes \cite{mohseni_review_2012}. Therefore, the need for large scale offshore network and the technical challenges in integrating \gls{RES} to the grid has proved to be an important area of concern.
+The absence of conventional generators would mean that the \gls{PE} converters will have to take into account the decreasing inertia of the system that leads to a faster dynamic behaviour and needs controllers with faster time response. Moreover, in large scale offshore networks, distant \gls{OWF}s would be connected in parallel. With parallel operation of the conventional controllers in the \gls{WG}s, interactions can persist among them and could lead to instability of the network. Additionally, the restoration of grid following disturbances by the \gls{PE} converter units is a serious matter of concern. With the conventional current control approach, grid restoration is challenging without the help of auxiliary diesel generators. However, in the case of large scale networks, the role of grid restoration must be taken up by \gls{PE} converters. There can be arguments that storage facilities such as battery and thermal can be a realizable solution in case when there are no conventional generators available. Huge investment costs, low lifetime and low efficiency when compared to controller modifications are the drawbacks that make these storage facilities practically unusable in large scale offshore networks \cite{telaretti_economic_2016}.
+
+With the available \gls{MMC}-\gls{HVDC} transmission technology, multiple \gls{MMC}-\gls{HVDC} transmission links connected in parallel would be required to transfer the bulk amount of wind power generated from large scale offshore networks to the onshore system. In such networks, the power flow between the parallel operated \gls{MMC}s and the \gls{OWF}s must be coordinated during steady state and dynamic conditions. The major challenges regarding voltage and frequency control during islanding of the \gls{OWF}s must be taken into account. The scenario of reactive current injection that needs to be provided by the \gls{WG}s during dynamic conditions as demanded by majority of the grid codes must also be taken into consideration \cite{mohseni_review_2012}. Therefore, the progress towards the development of large scale offshore networks calls for a generic model that is capable of tackling the aforementioned technical challenges and providing stable operation during steady state and dynamic conditions. 
+% the connection of distant \gls{OWF}s also creates challenges for the system operators. High Voltage Direct Current (\gls{HVDC}) transmission is preferred over High Voltage Alternating Current (\gls{HVAC}) for longer distances due to lower losses and lower investment costs \cite{ryndzionek_evolution_2020}. Conventionally, 
+
 
 \section{Literature Review}
 
-As seen in Section \ref{Background}, large scale deployment of \gls{OWF}s are a crucial requirement to meet the mentioned targets. So far, for small-sized wind farms, the offshore collector platform that connects all the \gls{WG}s and transfers power to the offshore converter station, has only contributed to a small part of the total expenditure. The reason being, the \gls{OWF}s mostly have radial collectors. This would not be the case when going for large scale wind farms. The critical area of concern will be the additional costs of subsea cables that require higher ratings and excess lengths \cite{quinonez-varela_electrical_2007}. The upcoming projects plan to have a higher rating of 66 kV compared to the conventional 33 kV \gls{HVAC} transmission due to the advantages of lesser array cabling, higher power transmission, a considerable decrease in capital expenditure and the avoidance of the \gls{AC} collector platform \cite{dnv66kv}. Different large scale topologies are being explored, and the conventional configurations are presented in \cite{guan_novel_2014}. However, the topology mentioned in \cite{lozada_ayala_dynamic_2018} embraces the utilization of 66 kV \gls{HVAC} transmission from the offshore \gls{AC} network directly to the offshore converter station. Such a topology could avoid the need for an offshore \gls{AC} collector platform and bring other benefits such as increased power transfer and reduced array cabling. The techno-economic assessment of such a configuration is depicted in \cite{misyris2020north}. 
+As seen in Section \ref{Background}, large scale deployment of \gls{OWF}s are a crucial requirement to meet the Paris agreement. Hence, a generic model for large scale networks with the latest trend in available technology is a key research requirement. 
 
-Various control concepts are being explored to mitigate the technical challenges mentioned in the previous section due to the integration of \gls{RES}. Typically, \gls{RES} are connected to the grid for parallel operation using present state of the art technology, i.e. grid following control strategies, in which the regulation of power output of the converters is achieved by measuring the angle of the grid voltage. The drawback of these controllers is that they require an already existing grid voltage. However, the V/F (voltage/frequency) control mode is used for operation in the islanded mode where the voltage is created by the V/F control. The issue concerned with this control is that it is not equipped for the parallel operation of various voltage forming units \cite{weise2019comparison}. New control strategies that can create the grid voltage and work in parallel operation is an emerging area of research. ENTSO-E classifies converters into three classes (Class 1, Class 2 and Class 3) and the converters working with the strategies mentioned above are categorized under Class 3. The complete requirements that need to be complied by such converters are depicted in \cite{christensen2020high}.
+% The literature review is mainly focused on three aspects: 1) control strategies to overcome the technical challenges related to voltage and frequency control in \gls{WG}s, 2) power transfer from the \gls{OWF}s to the offshore \gls{MMC} converter and 3) topology of  
+% Going with the latest trend, different approaches are available for connection of \gls{MMC}s.
 
-The new control strategies available for grid parallel and island operation are as follows:
+On the \gls{VSC}-\gls{HVDC} side, there are mainly three existing configurations for the connection of offshore and onshore converter stations that are currently available \cite{cigre_B455}, \cite{sharifabadi2016design}: 
 \begin{itemize}
-    \item Virtual Synchronous Machines (VSM): The characteristic of synchronous machines in terms of inertia and voltage support is imitated by correspondingly deriving the equations for control \cite{chen_comparison_2012}, \cite{duckwitz_operating_behavior}, \cite{lu_virtual_2019}.
-    
-    \item Modified Droop Control:
-    For decentralized grids, the parallel operation of voltage forming units is developed recently using the f/P (frequency/active power) and V/Q (voltage/reactive power) droop controls similar to the control in synchronous generators \cite{lopes2012pv}. Few authors have named these droop control concepts as Virtual Synchronous Machines Without Inertia (VSCM0H) \cite{yu2016use}.
-    
-    \item Direct Voltage Control (\gls{DVC}):
-    The \gls{DVC} control allows for the direct control of the \gls{AC} converter voltage which in turn varies the current injected by the converter  \cite{korai_dynamic_2019}, \cite{erlich_new_2017}. This approach provides continuous control both in steady-state and dynamic scenarios. This control method is implemented for analysis in this thesis work.
-    
-    \item Extended Current Control:
-    The control is similar to the classical current control with an additional inertia control in the outer control loop by using a df/dt controller that gives a behaviour similar to that of a synchronous machine \cite{duckwitz_derivation_2019}. 
-    
+    \item Point-to-point connection: The configuration connects one \gls{OWF} to the offshore converter station, which is then connected using \gls{HVDC} link to the onshore converter station.
+    \item Multi-infeed connection: The configuration involves connecting one \gls{OWF} to two different onshore systems by connecting two offshore converter stations on a common bus on the Alternating Current (\gls{AC}) side and transmitting power through two \gls{HVDC} links. Such a configuration allows for increasing the rating of the \gls{OWF} beyond the capacity of a single offshore converter station. The drawback of such a configuration is that, it allows the connection of only one \gls{OWF} to the network.
+    \item Multi-Terminal Direct
+    Current (MTDC) connection: In this configuration, the \gls{HVDC} links of multiple offshore converter stations are connected to a main Direct Current (\gls{DC}) link. Such a configuration enables transfer of active power to the onshore system depending on the capacity of the main \gls{DC} link. The drawback of such a configuration is that, a complete shut down and restart of the connected \gls{MMC}s is required for a fault on the \gls{DC} side.
 \end{itemize}
 
+The multi-infeed and the MTDC connections allow for parallel operation of \gls{MMC}s which is a requirement for large scale offshore network with the available technology. But both the configurations have the drawback of being able to connect only one \gls{OWF} to the network. Therefore, configurations that utilize several \gls{OWF}s with parallel operation of \gls{MMC}s are currently unavailable and is a key area of research.
 
+
+On the \gls{OWF} side, conventionally, the \gls{OWF}s are connected to a \gls{AC} collector platform through 33 kV cables. At the platform, a 33/145 kV transformer is used to step-up the voltage and the power is transferred to the offshore converter station using 145 kV cables. However, the upcoming projects plan to have a higher rating of 66 kV compared to the conventional 33 kV \gls{HVAC} transmission due to the advantages of lesser array cabling, higher power transmission, a considerable decrease in capital expenditure. In such cases, the \gls{AC} collector platform can be avoided and power can transmitted from the \gls{OWF}s to the offshore converter station using 66 kV \gls{HVAC} cables \cite{dnv66kv}. The topology mentioned in \cite{lozada_ayala_dynamic_2018} embraces the utilization of 66 kV \gls{HVAC} transmission from the \gls{OWF}s to the offshore converter station.
+
+%The technical challenges regarding voltage and frequency control are key aspects to be considered for the development of large scale networks.
+Typically, \gls{PE} converters in the \gls{WG}s are connected to the network for parallel operation using present state-of-the-art technology, current control strategies. In such control strategies, the regulation of power output of the converters is achieved by measuring the angle of the grid voltage. The drawback of these control strategies is that they require an already existing reference voltage. There are control strategies that create the reference voltage and are termed as voltage control strategies. One among the voltage control strategies is the V/F (voltage/frequency) control mode that is utilized for operation in the islanded mode. The drawback with V/F control is that it is not equipped for the parallel operation of various voltage forming converter units \cite{weise2019comparison}. Therefore, there needs to be new control strategies in the \gls{WG}s that can create the reference voltage and work in parallel operation. Such control strategies are an emerging area of research. 
+There are studies performed to implement control strategies that can create voltage reference and work in parallel operation as well. The major strategies are as mentioned below:
+
+% European Network of Transmission System Operators for Electricity (ENTSO-E) classifies converters into three classes (Class 1, Class 2 and Class 3) and the converters working with the strategies mentioned above are categorized under Class 3. The complete requirements that need to be complied by such converters are depicted in \cite{christensen2020high}.
+
+\begin{itemize}
+    \item Virtual Synchronous Machines (VSM): The \gls{PE} converter control is modelled with the characteristics of a synchronous machine in terms of inertia and voltage support by correspondingly deriving the equations \cite{markovic2018lqr}, \cite{duckwitz_operating_behavior}, \cite{lu_virtual_2019}.
+    
+    \item Modified Droop Control:
+    This strategy is common for standalone grids, where the parallel operation of voltage forming units is developed recently using the f/P (frequency/active power) and V/Q (voltage/reactive power) droop controls similar to the control in synchronous generators \cite{bouzid2016simulation}. Few authors have named these droop control concepts as Virtual Synchronous Machines Without Inertia (VSCM0H) \cite{yu2016use}.
+    
+    \item Direct Voltage Control (\gls{DVC}):
+    \gls{DVC} is a representation of the conventional current control approach towards a voltage control. \gls{DVC} allows for the direct control of the \gls{AC} converter voltage which in turn varies the current injected by the converter  \cite{korai_dynamic_2019}, \cite{erlich_new_2017}. This approach provides continuous voltage control both in steady-state and dynamic scenarios. This control method is implemented for analysis in this thesis work.
+    
+    \item Extended Current Control:
+    The control is similar to the conventional current control with an additional inertia control in the outer control loop by using a synthetic inertia controller that gives a behaviour similar to that of a synchronous machine \cite{duckwitz_derivation_2019} \cite{liu2017control}. 
+\end{itemize}
+
+The real-time implementation of \gls{DVC} in Type-4 \gls{WG} is attempted in \cite{sethi_real-time_nodate-new}. However, the latest trend of 66 kV \gls{HVAC} transmission and the major requirement of reactive current injection by the \gls{WG}s during dynamic conditions is lacking.
+ 
 
 \section{Objectives and Research Questions}
-The overall goal of the thesis is to implement an enhanced control strategy for wind turbine generators in Voltage Source Converter - High Voltage Direct Current (\gls{VSC}-\gls{HVDC}) systems in \gls{EMT} simulators and to perform analysis on the dynamics of voltage and power flows within a large scale offshore transmission network. Electro-Magnetic Transient (\gls{EMT}) simulation-based software tools are utilized in this thesis to analyze the performance of the developed control models. The thesis makes use of the average model of Type-4 \gls{WG} available in RSCAD as the basis. The \gls{EMT} based simulation interface in DIgSILENT PowerFactory tool is utilized as well. This report provides a detailed description of the different available features in RSCAD that are employed to develop a large scale model. 
+The overall goal of the thesis is to develop a generic digital twin model of 2 GW, 66 kV \gls{HVAC} offshore network and to perform analysis on the dynamics of voltage and power at various locations in the network. The thesis makes use of the Electro-Magnetic Transient (\gls{EMT}) simulation-based software tools such as RSCAD and PowerFactory to analyze the performance of the developed control models. The average model of Type-4 \gls{WG} available in RSCAD is used as a starting point. The thesis provides a detailed description of the different available features in RSCAD that are employed to develop the 2 GW model. 
 To achieve the overall goal, the following research questions are defined:
 \begin{itemize}
     \item How effective is the Direct Voltage Control (\gls{DVC}) when implemented in an \gls{EMT} average model of Type-4 \gls{WG} connected to a 66 kV equivalent \gls{HVAC} system in RSCAD?
     
-    \item What insights can be attained by the \gls{EMT} average model of Type-4 \gls{WG} with \gls{DVC} in 66 kV network in RSCAD in comparison with a similar system modelled with a simplified Type-4 \gls{WG} configuration with \gls{DVC} in DIgSILENT PowerFactory?
+    \item What insights can be attained by the \gls{EMT} average model of Type-4 \gls{WG} with \gls{DVC} in 66 kV network in RSCAD in comparison with a similar network modelled with a simplified Type-4 \gls{WG} configuration with \gls{DVC} in DIgSILENT PowerFactory?
     
-    \item How can Type-4 \gls{WG}s with implemented \gls{DVC} work in coordination with offshore Modular Multi-level Converters (\gls{MMC}s) within a multi-gigawatt offshore transmission network?
+    \item How can Type-4 \gls{WG}s with implemented \gls{DVC} work in coordination with offshore \gls{MMC}s within a multi-gigawatt offshore transmission network?
     
     \item How effectively do Type-4 \gls{WG}s with implemented \gls{DVC} perform when connected in parallel operation?
 
@@ -105,18 +123,20 @@ On behalf of the thesis objectives defined above, the methodology followed in th
 \end{itemize}
 
 \section{Thesis Outline}
-A brief outline of the main chapters is presented below, and a figurative representation of the thesis workflow is presented in Figure \ref{fig:Thesis_outline}.:
+A brief outline of the methodology is structured in several chapters, which sequentially describe the performed tasks as follows:
 \begin{itemize}
-    \item Chapter \ref{2}: The chapter presents the concepts of wind energy conversion system and the classification of wind turbines. The overview of the offshore wind farm system with all the major equipment and the latest trend in technology is explained. The issues with the present control structures and the necessity to move towards better control strategies are addressed. A new control structure implemented in this thesis is also formulated.  
+    \item Chapter \ref{2}: The chapter presents the concepts of wind energy conversion system and the classification of wind turbines. The overview of the \gls{OWF} system with all the major equipment and the latest trend in technology is explained. The issues with the present current control strategies and the necessity to move towards better control strategies are addressed. The new control strategy, \gls{DVC}, to be implemented in Type-4 \gls{WG} is formulated.  
     
-    \item Chapter \ref{3}: The implementation of the identified control strategy in \cite{korai_dynamic_2019} and \cite{sethi_real-time_nodate-new} for a 66 kV \gls{HVAC} network model in RSCAD is detailed. The performance of Type-4 \gls{WG} with \gls{DVC}, in terms of reactive current injection, under severe disturbances is analyzed. Modelling of a similar 66 kV \gls{HVAC} network in DIgSILENT PowerFactory tool is also addressed. The comparison of the dynamic performance of the \gls{DVC} in two \gls{EMT} platforms (RSCAD and PowerFactory) for a 66 kV \gls{HVAC} offshore network during severe disturbances is carried out. 
+    \item Chapter \ref{3}: The implementation of \gls{DVC} in \cite{korai_dynamic_2019} and \cite{sethi_real-time_nodate-new} for a digital twin model of 66 kV \gls{HVAC} offshore network in RSCAD is detailed. The performance of Type-4 \gls{WG} with \gls{DVC}, in terms of voltage stability and reactive current injection, under severe disturbances is analyzed. Modelling of a similar 66 kV \gls{HVAC} network in DIgSILENT PowerFactory tool is also addressed. The comparison of the dynamic performance of \gls{DVC} in two \gls{EMT} platforms (RSCAD and PowerFactory) for a 66 kV \gls{HVAC} offshore network during severe disturbances is carried out. 
     
-    \item Chapter \ref{4}: The development of a large scale 2 GW offshore network model in RSCAD is detailed. The modifications in the control structures of the \gls{MMC}s to work in coordination with the implemented \gls{DVC} in \gls{WG}s are addressed.
+    \item Chapter \ref{4}: The development of a large scale digital twin model of a 2 GW offshore network in RSCAD is detailed. The modifications in the control structures of the \gls{MMC}s to work in coordination with the implemented \gls{DVC} in \gls{WG}s are addressed.
     
-    \item Chapter \ref{5}: The operation of the large scale network is discussed. The interplay of offshore \gls{MMC}s and Type-4 \gls{WG}s in terms of dynamic power flow control within the offshore network (by analyzing the voltage and current profiles in the electrical path between the \gls{WG}s and the \gls{MMC}s) is performed. 
+    \item Chapter \ref{5}: The operation of the large scale 2 GW network is discussed. The interplay of offshore \gls{MMC}s and Type-4 \gls{WG}s in terms of dynamic power flow control within the offshore network (by analyzing the voltage and current profiles in the electrical path between the \gls{WG}s and the \gls{MMC}s) is performed. 
     
     \item Chapter \ref{6}: The significant conclusions for the research questions are provided. The future scope and recommendations are also added.
 \end{itemize}
+
+A figurative representation of the thesis workflow is presented in Figure \ref{fig:Thesis_outline}.
 
 \begin{figure}[H]
 \centering
