--- a/2.Scientific_Background.tex
+++ b/2.Scientific_Background.tex
@@ -2,7 +2,7 @@
 An outline of the fundamentals required for this thesis work is presented in this chapter. Firstly, the basics of wind energy conversion systems are explained. All components that are a part of an offshore wind farm network are depicted and explained. The conventional control topologies in \gls{VSC}s are also explained.
 
 \section{Wind Energy Conversion Systems (WECS)}\label{WECS_theory}
-The \gls{WECS} is a mixture of various engineering fields such as mechanical, electrical and control systems. The \gls{WECS} consists of several components that convert the kinetic energy of the wind into electrical energy and transfer power efficiently and systematically. The major mechanical equipment in the \gls{WECS} are the turbine tower, nacelle, rotor blades, hub, drives, gearbox, drive-train and mechanical brakes \cite{manwell2010wind}. The power electronic (\gls{PE}) converters, electrical generator, transmission cables, power transformers and transmission towers constitute the electrical part. The control systems \cite{yaramasu_high-power_2015} governs both the electrical and mechanical systems.
+The \gls{WECS} is a mixture of various engineering fields such as mechanical, electrical and control systems. The \gls{WECS} consists of several components that convert the kinetic energy of the wind into electrical energy and transfer power efficiently and systematically. The major mechanical equipment in the \gls{WECS} are the turbine tower, nacelle, rotor blades, hub, drives, gearbox, drive-train and mechanical brakes \cite{manwell2010wind}. The power \gls{PE} converters, electrical generator, transmission cables, power transformers and transmission towers constitute the electrical part. The control systems \cite{yaramasu_high-power_2015} governs both the electrical and mechanical systems.
 The basic structure of the wind energy conversion system is depicted in Figure \ref{fig:WECS}.   
 
 \begin{figure}[H]
@@ -41,7 +41,7 @@ The $C_p$-$\lambda$ characteristics are represented for different pitch angle ($
 \end{figure}
 
 \section{Wind Turbine Generator}
-The Wind Turbine Generator (herewith termed as Wind Generator (\gls{WG}) ) consists of the mechanical equipment mentioned in Section \ref{WECS_theory}, the electrical generator and the \gls{PE} converters as shown in Figure \ref{fig:WECS}. Depending on the speed of operation, \gls{WG}s can be classified as follows \cite{ali_wind_2012}:
+The Wind Turbine Generator (also termed as Wind Generator (\gls{WG}) ) consists of the mechanical equipment mentioned in Section \ref{WECS_theory}, the electrical generator and the \gls{PE} converters as shown in Figure \ref{fig:WECS}. Depending on the speed of operation, \gls{WG}s can be classified as follows \cite{ali_wind_2012}:
 
 \begin{itemize}
     \item \textbf{Type 1 - Fixed speed Induction Generator (FSIG) :} Type 1 \gls{WG} has a fixed speed of operation. Hence, maximum power extraction at all times is not possible.
