--- a/3.Implementation_of_DVC.tex
+++ b/3.Implementation_of_DVC.tex
@@ -1,4 +1,4 @@
-\chapter{Modelling and Analysis of DVC in 66 kV HVAC Offshore Network}\label{3}
+\chapter{Modelling and Analysis of DVC in a Digital Twin of 66 kV HVAC Offshore Network}\label{3}
 
 In this chapter, the basics of Electro-Magnetic Transient (\gls{EMT}) hardware utilized is explained briefly. Then the network model consisting of a Type-4 \gls{WG} with Direct Voltage Control (\gls{DVC}) \cite{korai_dynamic_2019}, \cite{sethi_real-time_nodate-new} in a 66 kV \gls{HVAC} offshore network in RSCAD is detailed. The performance of the control strategy is tested for severe dynamic conditions. Lastly, the performance of the \gls{DVC} modelled in RSCAD is then validated with the benchmark \gls{DVC} model in DIgSILENT PowerFactory software \cite{korai_98_nodate} (based on a qualitative comparison because of the unavoidable differences between the software packages) for a similar 66 kV \gls{HVAC} offshore network.
 
