--- a/6.Conclusions_and_future_scope.tex
+++ b/6.Conclusions_and_future_scope.tex
@@ -3,12 +3,32 @@
 This chapter provides a concise description of the achieved results in the previous chapters, answers to the formulated research questions in Chapter \ref{1} and the future scope of this thesis is presented at the end.
 
 \section{Summary}
-The compelling need to move towards \gls{RES} and the technical challenges faced due to the penetration of \gls{PE} converters is detailed in Chapter \ref{1} of the thesis. The relevant theoretical background required for the thesis work is presented in Chapter \ref{2}. After recognizing the need for a 66 kV \gls{HVAC} offshore transmission through literature, a 66 kV offshore network with Type-4 \gls{WG} is modelled for \gls{EMT} simulations in Chapter \ref{3}. The 66 kV \gls{HVAC} cables transfer power from the \gls{OWF} to the infinite grid. The conventional usage of an offshore collector platform where the 33 kV from \gls{OWF} is stepped up to nearly 145 kV is avoided when using 66 kV \gls{HVAC} transmission and direct usage of 66 kV allows for twice the amount of power to be transferred. To overcome the challenges faced by conventional current control, the identified \gls{DVC} is implemented in the \gls{GSC} of Type-4 \gls{WG} model for the network in RSCAD. The design of a \gls{HPF} at the output of \gls{GSC} to filter out the higher frequency components is depicted in Section \ref{HPF_design}. On running \gls{EMT} simulations, it is seen that \gls{DVC} provides effective voltage control and the required performance of reactive power injection during dynamic conditions as mentioned in major grid codes \cite{mohseni_review_2012} is achieved. The influence of the major element in \gls{DVC} i.e. the washout filters is detailed by understanding the effect of gain parameters. To validate the \gls{DVC} operation in RSCAD, the performance of the model is compared with the benchmark model in PowerFactory \cite{korai_dynamic_2019} for a similarly modelled 66 kV network. The working is tested for a severe disturbance such as a three-phase line to ground fault in the middle of the cable. It is observed that \gls{DVC} modelled in RSCAD provides similar characteristics as the benchmark \gls{DVC} model in PowerFactory. Thereby, a Type-4 \gls{WG} model with implemented \gls{DVC} in RSCAD working in connection with an infinite grid is successfully developed and validated. The model can be used as reference for future works due to its real-time application.  
+The thesis tackles the research problems identified in Chapter \ref{1} related to the need for large scale offshore networks with the available technology and provides solutions to mitigate technical challenges related to voltage and frequency control while developing large scale offshore networks.
 
-The effective method to accomplish the targets set for several European and other countries towards energy transition is to further the usage of large scale offshore wind energy. In this thesis, a large scale offshore network with \gls{DVC} in \gls{WG}s is developed as detailed in Chapter \ref{4}. This is done by modelling a 2 GW offshore network with four sets of \gls{WG}s (with \gls{DVC}s) connected to two \gls{MMC}s using \gls{HVAC} cables through a modular approach in RSCAD. Each \gls{WG} can be scaled up to have a maximum rating of 500 MW. The model also avoids the usage of a offshore collector platofrm by using 66 kV \gls{HVAC} transmission. The chosen topology for the network and the representation of subsystems using Tline modules in RSCAD is represented. The V/F control mode available in \cite{wachal2014guide} is developed for \gls{MMC}-1 suitable for a 66 kV network and the outer loop control of \gls{MMC}-2 is modified to be suitable for a 66 kV network. The work around to use an extra interface transformer in \gls{MMC}-2 bus due to the unavailability of 66 kV control structure for \gls{MMC} in RSCAD is explained. 
+From literature, it is seen that the current state-of-the-art technology, \gls{MMC}-\gls{HVDC} transmission, for transferring offshore wind power is limited to a maximum capacity of 1.2 GW \cite{peralta2012detailed}. Hence, a configuration for a large scale network (greater than or equal 2 GW) with the available technology is currently lacking. It is expected that the upcoming \gls{OWF} projects will be utilizing 66 kV \gls{HVAC} transmission from \gls{OWF}s to the offshore converter station due to their significant advantages over the conventional combination of 33 kV and 145 kV \cite{dnv66kv}. Moreover, the technical challenges related to voltage and frequency control in islanding of \gls{OWF}s is not full filled in real-time application and lacks the major requirement of reactive current injection by the \gls{WG}s during dynamic conditions \cite{sethi_real-time_nodate-new}.
+
+The thesis adapts the latest trend in technology and overcomes the above mentioned research gaps by achieving the overall goal of developing a generic digital twin model of 2 GW, 66 kV \gls{HVAC} offshore network in RSCAD and performing analysis on the dynamics of voltage and power at various locations in the network. The digital twin model developed in this thesis adapts a hybrid configuration with two \gls{MMC}s working in parallel and connecting four \gls{OWF}s to the onshore system. The chosen configuration is a modified layout of the hub-and-spoke in \cite{abb_hvdc_2018} and such a network is currently unavailable in existing literature. Additionally, the technical challenges faced while using conventional current control strategies in \gls{WG}s related to voltage and frequency control are identified in the literature and are mitigated by implementing a new control strategy, \gls{DVC}, in all the four \gls{WG}s in RSCAD for real-time application. 
+
+To achieve the overall goal, initially, the \gls{DVC} is implemented for real-time application in RSCAD for one set of \gls{OWF} connected to a 66 kV \gls{HVAC} network. The large scale 2 GW offshore network is developed by modularly connecting four sets of the aforementioned single \gls{OWF} model in parallel. The 2 GW offshore wind power is transferred to the onshore network through two parallel connected \gls{MMC}s. The key features of the model include- all the \gls{WG}s are equipped with \gls{DVC}, one \gls{MMC} working in grid forming control and the other working in grid following control. Such a model is unique because it incorporates a hybrid layout that allows for the coordination of the above mentioned strategies during steady state and dynamic conditions in the network.    
 
 
-The operation of the 2 GW model is detailed in Chapter \ref{5}. The sychronization of \gls{MMC}s, energization procedure of \gls{HVAC} cables and \gls{WG}s in real time environment are described. To achieve the overall goal defined in Chapter \ref{1}, the 2 GW test network is subjected to perturbations such as sudden disconnection of 1 set of \gls{WG} and three-phase fault in the middle of an \gls{HVAC} cable for dynamic analysis. A logic is developed in RSCAD for the operation of circuit breaker at the \gls{HVAC} cable end. The performance of \gls{DVC} to work in islanding operation is depicted by the operation of the circuit breaker. The \gls{DVC} implemented in \gls{GSC} executes reactive current injection by \gls{WG} during islanding operation in a large scale network which is also a significant requirement for Class 3 type converters. A modular 2 GW model with an control strategy (\gls{DVC}) implemented in \gls{WG}, working in coordination with two \gls{MMC}s with different control strategies is successfully developed for \gls{EMT} simulations in the real-time environment.   
+Few significant results of the model include the achievement of short-term voltage stability in the network during severe dynamic scenarios, the requirement of reactive current injection by \gls{WG}s during islanding by performing three-phase fault analysis. These results confirm the stable operation of the network under severe dynamic scenarios and the corresponding controller models can be utilized for further advancements on the size of the large scale network.  
+
+% The voltage stability and power flow in the network during severe dynamic conditions such as disconnection of one set of \gls{OWF} and a three-phase line to ground fault in the middle of an \gls{HVAC} cable, The \gls{DVC} implemented in Type-4 \gls{WG}s    
+
+% The compelling need to move towards \gls{RES} and the technical challenges faced due to the penetration of \gls{PE} converters is detailed in Chapter \ref{1} of the thesis. The relevant theoretical background required for the thesis work is presented in Chapter \ref{2}. 
+
+
+
+% After recognizing the need for a 66 kV \gls{HVAC} offshore transmission through literature, a 66 kV offshore network with Type-4 \gls{WG} is modelled for \gls{EMT} simulations in Chapter \ref{3}. The 66 kV \gls{HVAC} cables transfer power from the \gls{OWF} to the infinite grid. The conventional usage of an offshore collector platform where the 33 kV from \gls{OWF} is stepped up to nearly 145 kV is avoided when using 66 kV \gls{HVAC} transmission and direct usage of 66 kV allows for twice the amount of power to be transferred. To overcome the challenges faced by conventional current control, the identified \gls{DVC} is implemented in the \gls{GSC} of Type-4 \gls{WG} model for the network in RSCAD. The design of a \gls{HPF} at the output of \gls{GSC} to filter out the higher frequency components is depicted in Section \ref{HPF_design}. On running \gls{EMT} simulations, it is seen that \gls{DVC} provides effective voltage control and the required performance of reactive power injection during dynamic conditions as mentioned in major grid codes \cite{mohseni_review_2012} is achieved. The influence of the major element in \gls{DVC} i.e. the washout filters is detailed by understanding the effect of gain parameters. To validate the \gls{DVC} operation in RSCAD, the performance of the model is compared with the benchmark model in PowerFactory \cite{korai_dynamic_2019} for a similarly modelled 66 kV network. The working is tested for a severe disturbance such as a three-phase line to ground fault in the middle of the cable. It is observed that \gls{DVC} modelled in RSCAD provides similar characteristics as the benchmark \gls{DVC} model in PowerFactory. Thereby, a Type-4 \gls{WG} model with implemented \gls{DVC} in RSCAD working in connection with an infinite grid is successfully developed and validated. The model can be used as reference for future works due to its real-time application.  
+
+% The effective method to accomplish the targets set for several European and other countries towards energy transition is to further the usage of large scale offshore wind energy. In this thesis, a large scale offshore network with \gls{DVC} in \gls{WG}s is developed as detailed in Chapter \ref{4}. This is done by modelling a 2 GW offshore network with four sets of \gls{WG}s (with \gls{DVC}s) connected to two \gls{MMC}s using \gls{HVAC} cables through a modular approach in RSCAD. Each \gls{WG} can be scaled up to have a maximum rating of 500 MW. The model also avoids the usage of a offshore collector platofrm by using 66 kV \gls{HVAC} transmission. The chosen topology for the network and the representation of subsystems using Tline modules in RSCAD is represented. The V/F control mode available in \cite{wachal2014guide} is developed for \gls{MMC}-1 suitable for a 66 kV network and the outer loop control of \gls{MMC}-2 is modified to be suitable for a 66 kV network. The work around to use an extra interface transformer in \gls{MMC}-2 bus due to the unavailability of 66 kV control structure for \gls{MMC} in RSCAD is explained. 
+
+
+% The operation of the 2 GW model is detailed in Chapter \ref{5}. The sychronization of \gls{MMC}s, energization procedure of \gls{HVAC} cables and \gls{WG}s in real time environment are described. To achieve the overall goal defined in Chapter \ref{1}, the 2 GW test network is subjected to perturbations such as sudden disconnection of 1 set of \gls{WG} and three-phase fault in the middle of an \gls{HVAC} cable for dynamic analysis. A logic is developed in RSCAD for the operation of circuit breaker at the \gls{HVAC} cable end. 
+
+
+% The performance of \gls{DVC} to work in islanding operation is depicted by the operation of the circuit breaker. The \gls{DVC} implemented in \gls{GSC} executes reactive current injection by \gls{WG} during islanding operation in a large scale network which is also a significant requirement for majority of the grid codes. A modular 2 GW model with an control strategy (\gls{DVC}) implemented in \gls{WG}, working in coordination with two \gls{MMC}s with different control strategies is successfully developed for \gls{EMT} simulations in the real-time environment.   
 
 
 \section{Answers to Research Questions}
