--- a/Abstract.tex
+++ b/Abstract.tex
@@ -8,6 +8,6 @@ Conventionally, the OWFs are coupled to a AC collector platform through 33 kV Hi
 
 This thesis proposes a digital twin model of a 2 GW offshore network with the parallel operation of two MMC-HVDC transmission links connecting four OWFs to two onshore systems representing a large scale power system. The MMCs are connected to a common bus on the AC side of the network, with one MMC working in grid forming operation and the other in grid following operation. Additionally, to mitigate the challenges corresponding to voltage and frequency stability in large scale offshore networks, a Direct Voltage Control (DVC) strategy is implemented in the Type-4 wind generators (WGs) representing the OWFs. After analyzing the need for 66 kV HVAC transmission from the OWFs to the offshore converter station, a 66 kV offshore network is developed to achieve 2 GW offshore wind power transfer. The electrical power system is developed in the power system simulation software, RSCAD\textsuperscript{TM} Version 5.011.1, in order to perform Electro-Magnetic Transient (EMT) based simulations. 
 
-Initially, a single OWF with DVC implemented in the WG connected to a AC equivalent system is modelled to test the performance of DVC in a 66 kV HVAC network. The DVC provides continuous voltage control that improves the dynamic performance of the power system. As mentioned in most of the grid codes, the significant requirement of reactive power injection by the OWF during dynamic conditions is satisfied by the controller. DVC also avoids the need of an external controller to perform such an action. To validate the working of the implemented DVC in RSCAD, a similar 66 kV HVAC network with the benchmark DVC model is developed in DIgSILENT PowerFactory\textsuperscript{TM} 2019 SP2 (x64), for EMT simulations and tested under severe dynamic conditions. Both the models provide similar results, confirming the validation of the RSCAD model. Moreover, the RSCAD model provides a better representation of the practical environment operation. 
+Initially, a single OWF with DVC implemented in the WG connected to a AC equivalent system is modelled to test the performance of DVC in a digital twin of a 66 kV HVAC network. The DVC provides continuous voltage control that improves the dynamic performance of the power system. As mentioned in most of the grid codes, the significant requirement of reactive power injection by the OWF during dynamic conditions is satisfied by the controller. DVC also avoids the need of an external controller to perform such an action. To validate the working of the implemented DVC in RSCAD, a similar 66 kV HVAC network with the benchmark DVC model is developed in DIgSILENT PowerFactory\textsuperscript{TM} 2019 SP2 (x64), for EMT simulations and tested under severe dynamic conditions. Both the models provide similar results, confirming the validation of the RSCAD model. Moreover, the RSCAD model provides a better representation of the practical environment operation. 
 
-To achieve the overall goal of developing a 2 GW offshore transmission network, a hybrid system with the "hub-and-spoke" principle is utilized in this thesis. The 2 GW offshore network is achieved by a modular approach of the single OWFs connected to two MMCs working in parallel. The coordination between the implemented DVC in WGs and the control structures in MMCs is analysed for different scenarios in the network. The performance of the 2 GW network in terms of short-term voltage stability and power flow during severe dynamic conditions in the grid is analyzed. The requirement of reactive power injection from an OWF during dynamic conditions is achieved by performing a three-phase fault scenario in the middle of the cable. 
+To achieve the overall goal of developing a 2 GW offshore transmission network, a hybrid system with the hub-and-spoke principle is utilized in this thesis. The 2 GW offshore network is achieved by a modular approach of the single OWFs connected to two MMCs working in parallel. The coordination between the implemented DVC in WGs and the control structures in MMCs is analysed for different scenarios in the network. The performance of the 2 GW network in terms of short-term voltage stability and power flow during severe dynamic conditions in the grid is analyzed. The requirement of reactive power injection from an OWF during dynamic conditions is achieved by performing a three-phase fault scenario in the middle of the cable. 
