--- a/references_3.bib
+++ b/references_3.bib
@@ -1,9 +1,17 @@
 
-@misc{erlich_description_nodate,
+@misc{noauthor_first_nodate,
+	title = {The first {Hub}-and-{Spoke} energy island – {Northseawindpowerhub}},
+	url = {https://northseawindpowerhub.eu/the-first-hub-and-spoke-energy-island/},
+	language = {en-US},
+	urldate = {2020-10-10}
+}
+
+@misc{erlich_description_2018,
 	title = {Description, {Modelling} and {Simulation} of a {Benchmark} {System} for {Converter} {Dominated} {Grdis} ({Part} {I})},
 	url = {https://www.digsilent.de/en/faq-reader-powerfactory/do-you-have-an-example-of-a-fault-tolerant-power-system-with-98-share-of-renewables.html},
 	urldate = {2020-10-06},
-	author = {Erlich, I. and Korai, A.}
+	author = {Erlich, I. and Korai, A.},
+	year = {2018}
 }
 
 @misc{noauthor_mmc_nodate,
@@ -1034,7 +1042,6 @@ FileManager acts as the “home page” of the RSCAD software. It provides a spa
 	year = {2018},
 	pages = {1264--1274}
 }
-
 @book{gonzalez-longatt_advanced_2018,
 	address = {Cham},
 	series = {Green {Energy} and {Technology}},
@@ -1063,6 +1070,7 @@ FileManager acts as the “home page” of the RSCAD software. It provides a spa
 	year = {2017},
 	pages = {843}
 }
+
 @incollection{chen_overview_2013,
 	title = {An overview of power electronic converter technology for renewable energy systems},
 	isbn = {978-1-84569-783-9},
