--- a/report.bib
+++ b/report.bib
@@ -83,18 +83,10 @@ The simulator-Hardware,
 }
 
 @techreport{dnv66kv,
+  type = {Technical Brochure},
   title={{66 kV Systems for Offshore Wind Farms}},
   author={DNV.GL},
-  year={66},
-  institution={Technical Report 113799-UKBR-R02, Rev. 2}
-}
-
-@article{cigre2005b4,
-  title={{B4 HVDC and Power Electronics, Working Group B4-37, VSC Transmission}},
-  author={CIGR{\'E}, SC},
-  journal={CIGR E Tech. Brochure no},
-  volume={269},
-  year={2005}
+  year={2015},
 }
 
 @inproceedings{weise2019comparison,
@@ -187,6 +179,17 @@ The simulator-Hardware,
   year = {2015}
 }
 
+@techreport{cigre2005b4,
+  address = {},
+  type = {Technical Brochure},
+  title = {{VSC Transmission}},
+  language = {en},
+  institution = {CIGRE Working Group B4.37},
+  number = {269},
+  year = {2005}
+}
+
+
 @phdthesis{saad2015modelisation,
   title={Mod{\'e}lisation et simulation d'une liaison HVDc de type VSC-MMC},
   author={Saad, Hani Aziz},
@@ -199,4 +202,68 @@ The simulator-Hardware,
   author={Kothari, Dwarkadas Pralhaddas and Nagrath, IJ},
   year={2003},
   publisher={Tata McGraw-Hill Education}
+}
+
+@article{peralta2012detailed,
+  title={Detailed and averaged models for a 401-level MMC--HVDC system},
+  author={Peralta, Jaime and Saad, Hani and Denneti{\`e}re, S{\'e}bastien and Mahseredjian, Jean and Nguefeu, Samuel},
+  journal={IEEE Transactions on Power Delivery},
+  volume={27},
+  number={3},
+  pages={1501--1508},
+  year={2012},
+  publisher={IEEE}
+}
+
+@article{markovic2018lqr,
+  title={{LQR-based adaptive virtual synchronous machine for power systems with high inverter penetration}},
+  author={Markovic, Uros and Chu, Zhongda and Aristidou, Petros and Hug, Gabriela},
+  journal={IEEE Transactions on Sustainable Energy},
+  volume={10},
+  number={3},
+  pages={1501--1512},
+  year={2018},
+  publisher={IEEE}
+}
+
+@article{he2017simple,
+  title={{A simple decentralized islanding microgrid power sharing method without using droop control}},
+  author={He, Jinwei and Pan, Yiwei and Liang, Beihua and Wang, Chengshan},
+  journal={IEEE Transactions on Smart Grid},
+  volume={9},
+  number={6},
+  pages={6128--6139},
+  year={2017},
+  publisher={IEEE}
+}
+
+@inproceedings{bouzid2016simulation,
+  title={Simulation of droop control strategy for parallel inverters in autonomous AC microgrids},
+  author={Bouzid, Allal El Moubarek and Sicard, Pierre and Yamane, Amine and Paquin, Jean-Nicolas},
+  booktitle={2016 8th International Conference on Modelling, Identification and Control (ICMIC)},
+  pages={701--706},
+  year={2016},
+  organization={IEEE}
+}
+
+@article{liu2017control,
+  title={{Control of VSC-HVDC Connected Offshore Windfarms for Providing Synthetic Inertia}},
+  author={Liu, Xudan and Lindemann, Andreas},
+  journal={IEEE Journal of Emerging and Selected Topics in Power Electronics},
+  volume={6},
+  number={3},
+  pages={1407--1417},
+  year={2017},
+  publisher={IEEE}
+}
+
+@article{gnanarathna2010efficient,
+  title={Efficient Modeling of Modular Multilevel HVDC Converters (MMC) on Electromagnetic Transient Simulation Programs},
+  author={Gnanarathna, Udana N and Gole, Aniruddha M and Jayasinghe, Rohitha P},
+  journal={IEEE Transactions on power delivery},
+  volume={26},
+  number={1},
+  pages={316--324},
+  year={2010},
+  publisher={IEEE}
 }
