--- a/report.tex
+++ b/report.tex
@@ -139,7 +139,7 @@
 %\input{Acknowledgement}
 \input{Abstract}
 
-%\tableofcontents
+\tableofcontents
 
 
 
@@ -155,11 +155,11 @@
 \mainmatter
 
 \input{1.Introduction}
-\input{2.Scientific_Background}
+%\input{2.Scientific_Background}
 %\input{3.Implementation_of_DVC}
-%\input{4.Large_scale}
-%\input{5.Operation_of_2GW}
-%\input{6.Conclusions_and_future_scope}
+\input{4.Large_scale}
+\input{5.Operation_of_2GW}
+\input{6.Conclusions_and_future_scope}
 
 % \begin{appendices}
 % \input{Appendix-a}
@@ -167,11 +167,11 @@
 % \input{Appendix-c}
 % \input{Appendix-d}
 % \end{appendices}
-%\bibliographystyle{ieeetran}
+\bibliographystyle{ieeetran}
 %% Use letters for the chapter numbers of the appendices.
 
 
-%\bibliography{references_3,report}
+\bibliography{references_3,report}
 %\AtEveryBibitem{\clearlist{language}}
 
 \end{document}
